[gd_scene load_steps=6 format=3 uid="uid://cgwhtcxuqm6e6"]

[ext_resource type="Script" path="res://UI/main_menu.gd" id="1_roorf"]
[ext_resource type="Texture2D" uid="uid://fg1gluam1rnq" path="res://assets/sprites/Tilesets/Menu.png" id="1_wrg24"]
[ext_resource type="Texture2D" uid="uid://bmlptaramrj2x" path="res://assets/sprites/Tilesets/ButtonBackDrop.png" id="2_b3538"]
[ext_resource type="FontFile" uid="uid://dmxnw2ijq7o6v" path="res://assets/fonts/Zametka_Parletter.otf" id="3_l83el"]
[ext_resource type="PackedScene" uid="uid://ceetuuf6wgqlj" path="res://diary/diary.tscn" id="3_o2s8l"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_roorf")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_wrg24")
expand_mode = 2

[node name="DiaryPages" parent="TextureRect" instance=ExtResource("3_o2s8l")]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_right = 1.0
offset_left = -301.0
offset_top = -1.0
offset_right = 299.0
offset_bottom = -1.0
grow_horizontal = 0
scale = Vector2(0.75, 0.8)

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -446.0
offset_top = -194.0
offset_right = -95.9987
offset_bottom = 194.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Play" type="TextureButton" parent="TextureRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
mouse_default_cursor_shape = 2
texture_normal = ExtResource("2_b3538")
stretch_mode = 0

[node name="Label" type="Label" parent="TextureRect/VBoxContainer/Play"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.5
offset_top = -11.5
offset_right = 28.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.509953, 0.344841, 0.191242, 1)
theme_override_fonts/font = ExtResource("3_l83el")
theme_override_font_sizes/font_size = 56
text = "Играть"

[node name="Diary" type="TextureButton" parent="TextureRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
mouse_default_cursor_shape = 2
texture_normal = ExtResource("2_b3538")
stretch_mode = 0

[node name="Label" type="Label" parent="TextureRect/VBoxContainer/Diary"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.5
offset_top = -11.5
offset_right = 28.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.509953, 0.344841, 0.191242, 1)
theme_override_fonts/font = ExtResource("3_l83el")
theme_override_font_sizes/font_size = 56
text = "Дневник"

[node name="Quit" type="TextureButton" parent="TextureRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
mouse_default_cursor_shape = 2
texture_normal = ExtResource("2_b3538")
stretch_mode = 0

[node name="Label" type="Label" parent="TextureRect/VBoxContainer/Quit"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.5
offset_top = -11.5
offset_right = 28.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.509953, 0.344841, 0.191242, 1)
theme_override_fonts/font = ExtResource("3_l83el")
theme_override_font_sizes/font_size = 56
text = "Выйти"

[connection signal="pressed" from="TextureRect/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Diary" to="." method="_on_diary_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
